# qp

./: CMakeLists.txt  DECODE_DIAGRAM.md  LICENSE  README.md  conanfile.py  main.cpp  qp.cpp  qp.hpp
include/: qp.hpp
src/: qp_decode.cpp  qp_encode.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  qp_test.cpp
